--- a/metrics-reporter-console/pom.xml
+++ b/metrics-reporter-console/pom.xml
@@ -4,6 +4,13 @@
     <prerequisites>
         <maven>3.0.0</maven>
     </prerequisites>
+    <dependencies>
+        <dependency>
+            <groupId>org.graylog.plugins</groupId>
+            <artifactId>metrics-reporter-shared</artifactId>
+            <version>1.2.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
     <parent>
         <groupId>org.graylog.plugins</groupId>
